STEM-3 #comment fix test infrasturcture to make test passed